--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,16 @@
 ext {
     sourceCompatibility = "1.9"
+    appCompatVersion = '1.2.0'
+    constraintLayoutVersion = '2.0.2'
+    coreTestingVersion = '2.1.0'
+    lifecycleVersion = '2.2.0'
+    materialVersion = '1.2.1'
+    roomVersion = '2.2.5'
+    retrofitVersion = "2.5.0"
+    // testing
+    junitVersion = '4.13.1'
+    espressoVersion = '3.1.0'
+    androidxJunitVersion = '1.1.2'
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
