--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,8 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
-        
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.35.1'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
