--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ allprojects {
         jcenter()
         maven {
             url "http://maven.aliyun.com/nexus/content/groups/public/"
+            maven { url "https://jitpack.io" }
         }
     }
 }
