--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 30
@@ -104,4 +106,10 @@ dependencies {
 
     compile 'com.github.franmontiel:PersistentCookieJar:v1.0.1'
 
+    implementation 'com.tinder.scarlet:websocket-okhttp:0.1.12'
+    implementation 'com.tinder.scarlet:stream-adapter-rxjava2:0.1.12'
+    implementation 'com.tinder.scarlet:scarlet:0.1.12'
+    implementation 'com.tinder.scarlet:message-adapter-gson:0.1.12'
+
+    implementation "io.reactivex.rxjava2:rxjava:2.x.y"
 }
