--- a/app/build.gradle
+++ b/app/build.gradle
@@ -112,4 +112,7 @@ dependencies {
     implementation 'com.tinder.scarlet:message-adapter-gson:0.1.12'
 
     implementation "io.reactivex.rxjava2:rxjava:2.x.y"
+
+    //noinspection GradleCompatible
+    implementation "com.android.support:support-compat:28.0.0"
 }
