--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,5 +25,6 @@
         <activity android:name=".Activities.AuthActivity" />
         <activity android:name=".Activities.NewFriendActivity"/>
         <activity android:name=".Activities.ProfileActivity" />
+        <activity android:name=".Activities.ChatActivity"/>
     </application>
 </manifest>
