--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,5 +26,6 @@
         <activity android:name=".Activities.NewFriendActivity"/>
         <activity android:name=".Activities.ProfileActivity" />
         <activity android:name=".Activities.ChatActivity"/>
+        <activity android:name=".Activities.GroupProfile"/>
     </application>
 </manifest>
