--- a/app/build.gradle
+++ b/app/build.gradle
@@ -115,5 +115,14 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation "com.android.support:support-compat:28.0.0"
+    implementation 'com.google.android:flexbox:2.0.1'
+
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'net.alhazmy13.MediaPicker:libary:2.4.4@aar'
+    implementation 'net.alhazmy13.MediaPicker:rxjava:2.4.4@aar'
+
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.12.0'
+    implementation 'com.google.android.exoplayer:exoplayer-dash:2.12.0'
+    implementation 'com.google.android.exoplayer:exoplayer-ui:2.12.0'
 
 }
