--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:name=".WeixinApplication"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
         >
         <activity android:name="com.MobileCourse.Activities.SplashActivity">
@@ -21,7 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity" android:configChanges="orientation|screenSize" />
         <activity android:name=".Activities.AuthActivity" />
         <activity android:name=".Activities.NewFriendActivity"/>
         <activity android:name=".Activities.ProfileActivity" />
