--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <!--允许程序获取网络状态-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--允许程序访问WiFi网络信息-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--允许程序读写手机状态和身份-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--允许程序访问CellID或WiFi热点来获取粗略的位置-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
@@ -17,6 +25,9 @@
         android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
         >
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="0cf297bb26cd50c4f0fc7b3f52ab6ef1"/>
         <activity android:name="com.MobileCourse.Activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
