--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,10 +35,10 @@
             </intent-filter>
         </activity>
         <activity android:name=".MainActivity" android:configChanges="orientation|screenSize" />
-        <activity android:name=".Activities.AuthActivity" />
+        <activity android:name=".Activities.AuthActivity"/>
         <activity android:name=".Activities.NewFriendActivity"/>
         <activity android:name=".Activities.ProfileActivity" />
-        <activity android:name=".Activities.ChatActivity" />
+        <activity android:name=".Activities.ChatActivity" android:windowSoftInputMode="adjustResize" />
         <activity android:name=".Activities.GroupProfile"/>
     </application>
 </manifest>
